--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Digital Fortune Cookie</title>
 </head>
 
-<!--test comments hi hello-->
+<!--test comments hihi hello-->
 <body>
     <h1>DIGITAL FORTUNE COOKIE</h1> 
     <!-- this is a cat-->
